Updates to using curseforge maven

--- a/build.gradle
+++ b/build.gradle
@@ -91,6 +91,10 @@ minecraft {
 sourceSets.main.resources { srcDir 'src/generated/resources' }
 
 repositories {
+    maven {
+        name = "CurseForge"
+        url = "https://minecraft.curseforge.com/api/maven/"
+    }
     flatDir {
         dirs 'libs'
     }
@@ -102,7 +106,11 @@ dependencies {
     // The userdev artifact is a special name and will get all sorts of transformations applied to it.
     minecraft 'net.minecraftforge:forge:1.16.4-35.1.13'
 
-    implementation "libs:pokecube-aio-1.16.4-3.1.2-deobf"
+    // The below line can be uncommented and adjusted if you provide the jar via /libs
+    // implementation "libs:pokecube-aio-1.16.4-3.1.2-deobf"
+    
+    // If the above line is uncommented, the below should be commented out.
+    implementation "pokecube-aoi:pokecube-aio:release:deobf"
 }
 
 // Example for how to get properties into the manifest for reading by the runtime..
