--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,16 @@
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
+
+version_forge=35.1.4
+version_minecraft=1.16.4
+version_mcsupport=[1.16.4,1.17)
+version_pcsupport=[3.4.0,)
+version_mappings=20201028-1.16.3
+
+mod_id=examplemod
+compile_group=example
+
+compile_name=examplemod
+author_name=ExamplesRUS
+version_compile=0.0.0
