update values in gradle.properties

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,15 +3,16 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
-version_forge=36.1.0
+version_forge=36.1.4
 version_minecraft=1.16.5
 version_mcsupport=[1.16.5,1.17)
 version_pcsupport=[3.4.0,)
 version_mappings=1.16.5
+channel_mappings=official
 
-mod_id=examplemod
-compile_group=example
+mod_id=pokecubelevelrestriction
+compile_group=arimil
 
-compile_name=examplemod
-author_name=ExamplesRUS
-version_compile=0.0.0
+compile_name=pokecube-level-restriction
+author_name=Arimil
+version_compile=0.0.1
