--- a/gradle.properties
+++ b/gradle.properties
@@ -3,11 +3,13 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
-version_forge=35.1.4
-version_minecraft=1.16.4
-version_mcsupport=[1.16.4,1.17)
-version_pcsupport=[3.4.0,)
-version_mappings=20201028-1.16.3
+version_forge=36.2.2
+version_minecraft=1.16.5
+version_mcsupport=[1.16.5,1.17)
+version_pcsupport=[3.12.0,)
+version_mappings=1.16.5
+version_pokecube=1.16.5-3.12.0
+channel_mappings=official
 
 mod_id=examplemod
 compile_group=example
