--- a/gradle.properties
+++ b/gradle.properties
@@ -3,12 +3,12 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
-version_forge=36.2.2
-version_minecraft=1.16.5
-version_mcsupport=[1.16.5,1.17)
-version_pcsupport=[3.12.0,)
-version_mappings=1.16.5
-version_pokecube=1.16.5-3.13.1
+version_forge=38.0.16
+version_minecraft=1.18
+version_mcsupport=[1.18,1.19)
+version_pcsupport=[3.14.0,)
+version_mappings=1.18
+version_pokecube=285121:3555418
 channel_mappings=official
 
 mod_id=examplemod
