--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,24 +1,25 @@
+
 modLoader="javafml"
 loaderVersion="[31,)"
-issueTrackerURL=""
+issueTrackerURL="https://github.com/Renari/pokecube-level-restriction/issues"
 license="All rights reserved"
 
 [[mods]]
-    modId="examplemod"
+    modId="pokecubelevelrestriction"
     version="${file.jarVersion}"
-    displayName="Pokécube Example Addon"
-    authors="ExamplesRUS"
+    displayName="Pokécube Level Restriction"
+    authors="Arimil"
     description='''
-    Example of an addon development environment for pokecube
+    Makes it harder to catch Pokémob higher than your level.
     '''
     
-[[dependencies.examplemod]]
+[[dependencies.pokecubelevelrestriction]]
     modId="minecraft"
     mandatory=true
     versionRange="version_mc"
     ordering="NONE"
     side="BOTH"
-[[dependencies.examplemod]]
+[[dependencies.pokecubelevelrestriction]]
     modId="pokecube"
     mandatory=true
     versionRange="version_pokecube"
