update values in gradle.properties

--- a/gradle.properties
+++ b/gradle.properties
@@ -11,9 +11,9 @@ version_mappings=1.16.5
 version_pokecube=1.16.5-3.13.1
 channel_mappings=official
 
-mod_id=examplemod
-compile_group=example
+mod_id=pokecubelevelrestriction
+compile_group=arimil
 
-compile_name=examplemod
-author_name=ExamplesRUS
-version_compile=0.0.0
+compile_name=pokecube-level-restriction
+author_name=Arimil
+version_compile=0.0.1
