--- a/gradle.properties
+++ b/gradle.properties
@@ -9,12 +9,15 @@ version_mcsupport=[1.18.2,1.19)
 version_mappings=1.18.2
 channel_mappings=official
 
-version_pokecube=285121:3991111
+version_pokecube=285121:3996000
 version_pcsupport=[3.17.10,)
+
+version_jei=1.18.2:9.7.1.255
+version_configured=457570:3946495
 
 mod_id=pokecubelevelrestriction
 compile_group=arimil
 
 compile_name=pokecube-level-restriction
 author_name=Arimil
-version_compile=1.1.1
+version_compile=1.1.2
