--- a/gradle.properties
+++ b/gradle.properties
@@ -12,12 +12,12 @@ channel_mappings=official
 version_pokecube=285121:3991113
 version_pcsupport=[3.17.10,)
 
-version_jei=1.18.2:9.7.1.255
-version_configured=457570:3946495
+version_jei=1.19.2-forge:11.3.0.262
+version_configured=457570:3947885
 
 mod_id=pokecubelevelrestriction
 compile_group=arimil
 
 compile_name=pokecube-level-restriction
 author_name=Arimil
-version_compile=1.1.2
+version_compile=1.2.0
